<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/podcast_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/podcast_image_description"
        android:scaleType="fitXY"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="25dip"
        android:layout_marginRight="25dip" 
        android:src="@drawable/hourly_news_summary" />
     <TextView
        android:id="@+id/podcast_description"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="10dip"
        android:layout_marginRight="25dip"
        android:text="@string/podcast_description"
        android:gravity="center"
        android:textSize="20sp"
        android:ellipsize="end"/>
     <TextView
        android:id="@+id/podcast_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="25dip"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:gravity="center"
        android:ellipsize="end"/>
     <TableRow
         android:layout_weight="0"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:gravity="center|bottom" >
         <TextView 
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textStyle="bold"/>
        <!-- Total Duration Label -->
        <TextView 
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textStyle="bold"/>
     </TableRow>

     <SeekBar
         android:id="@+id/play_progressBar"
         android:layout_width="316dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:progressDrawable="@drawable/seekbar_progress"
         android:thumb="@drawable/img_seek_handler" />

      <TableRow
         android:layout_weight="0"
         android:gravity="center" >

        <ImageButton
               android:id="@+id/podcast_rew_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="15dip"
               android:background="@android:color/transparent"
               android:contentDescription="@string/acd_reverse_button"
               android:src="@drawable/img_rew_normal" />

        <ImageButton
               android:id="@+id/podcast_play_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="15dip"
               android:background="@android:color/transparent"
               android:contentDescription="@string/acd_play_button"
               android:src="@drawable/img_play_button_normal" />

       
        <ImageButton
               android:id="@+id/podcast_stop_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="15dip"
               android:background="@android:color/transparent"
               android:contentDescription="@string/acd_stop_button"
               android:src="@drawable/img_rew_30_normal" />
        
         <ImageButton
               android:id="@+id/podcast_ffwd_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="15dip"
               android:background="@android:color/transparent"
               android:contentDescription="@string/acd_forward_button"
               android:src="@drawable/img_ffwd_normal" />
        
     </TableRow>
</TableLayout>
